--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -118,11 +118,11 @@
       <!-- Input Card -->
       <div class="col-md-6 mb-4 mb-md-0">
         <div class="card">
-          <h4 class="mb-4">Enter your firstname</h4>
+          <h4 class="mb-4">Enter your prompt</h4>
           
           <form action="/prompt" method="POST">
             <div class="mb-4">
-              <label for="input" class="form-label">Firstname:</label>
+              <label for="input" class="form-label">Prompt:</label>
               {% if input %}
               <textarea 
                 id="input-textarea"
